--- a/package.xml
+++ b/package.xml
@@ -6,9 +6,9 @@
   <description>
     The Console_Getargs package implements a Command Line arguments
     parser that your CLI applications can use to parse arguments found in
-    $_SERVER['argv']. It performs some basic arguments validation and is capable
-    to return a formatted help text to the user, based on the configuration 
-    it is given.
+    $_SERVER['argv']. It performs some basic arguments validation and is
+    capable to return a formatted help text to the user, based on the
+    configuration it is given.
   </description>
   <maintainers>
     <maintainer>
@@ -18,7 +18,7 @@
       <role>lead</role>
     </maintainer>
     <maintainer>
-      <user>smattocks</user>
+      <user>scottmattocks</user>
       <name>Scott Mattocks</name>
       <email>scottmattocks@php.net</email>
       <role>lead</role>
