Adding basic unit tests info to package.xml
git-svn-id: http://svn.php.net/repository/pear/packages/Console_Getargs/trunk@171209 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -48,6 +48,11 @@ New example file.
           <file role="doc" name="example.php" />
           <file role="doc" name="example2.php" />
         </dir>
+        <dir name="tests">
+          <file role="test" name="Console_TestListener.php"/>
+          <file role="test" name="Getargs_basic_testcase.php"/>
+          <file role="test" name="test.php"/>
+        </dir>
       </dir>
     </filelist>
     <deps>
