Prep for release 1.2.1 (2004-11-18)
git-svn-id: http://svn.php.net/repository/pear/packages/Console_Getargs/trunk@172916 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -30,16 +30,12 @@
     </maintainer>
   </maintainers>
   <license>PHP License</license>
-  <release>
-    <version>1.2.0</version>
-    <date>2004-10-22</date>
+   <release>
+    <version>1.2.1</version>
+    <date>2004-11-18</date>
     <state>stable</state>
     <notes><![CDATA[
-Implement feature request #2428: Passing parameters on the command line
-Implement feature request #2445: Allow user defined argument lists
-Implement fix for bug #2486: Notice in parseArgs
-More detailed help message. Shows optional/required arguments.
-New example file. 
+Implement fix for bug #2677: Empty array for $arguments parameter (Bertrand Gugger)
     ]]></notes>
     <filelist>
       <dir name="/" baseinstalldir="Console">
@@ -60,6 +56,18 @@ New example file.
     </deps>
   </release>
   <changelog>
+    <release>
+      <version>1.2.0</version>
+      <date>2004-10-22</date>
+      <state>stable</state>
+      <notes><![CDATA[
+Implement feature request #2428: Passing parameters on the command line
+Implement feature request #2445: Allow user defined argument lists
+Implement fix for bug #2486: Notice in parseArgs
+More detailed help message. Shows optional/required arguments.
+New example file. 
+    ]]></notes>
+    </release>
     <release>
       <version>1.1.0</version>
       <date>2004-09-30</date>
