Sorry. Forgot test for new method getValues()
git-svn-id: http://svn.php.net/repository/pear/packages/Console_Getargs/trunk@186329 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -47,6 +47,7 @@ Implement feature request #4091: New method: getValues() (Stephan Schmidt)
         <dir name="tests">
           <file role="test" name="Console_TestListener.php"/>
           <file role="test" name="Getargs_basic_testcase.php"/>
+          <file role="test" name="Getargs_getValues_testcase.php"/>
           <file role="test" name="test.php"/>
         </dir>
       </dir>
