--- a/package.xml
+++ b/package.xml
@@ -31,11 +31,11 @@
   </maintainers>
   <license>PHP License</license>
    <release>
-    <version>1.3.0</version>
-    <date>2005-05-13</date>
+    <version>1.3.1</version>
+    <date>2006-04-10</date>
     <state>stable</state>
     <notes><![CDATA[
-Implement feature request #4091: New method: getValues() (Stephan Schmidt)
+Fix for Bug #7132: Missing value for $_SERVER['SCRIPT_NAME']. If $SERVER['SCRIPT_NAME'] not found, use $argv[0].
     ]]></notes>
     <filelist>
       <dir name="/" baseinstalldir="Console">
@@ -57,6 +57,14 @@ Implement feature request #4091: New method: getValues() (Stephan Schmidt)
     </deps>
   </release>
   <changelog>
+   <release>
+    <version>1.3.0</version>
+    <date>2005-05-13</date>
+    <state>stable</state>
+    <notes><![CDATA[
+Implement feature request #4091: New method: getValues() (Stephan Schmidt)
+    ]]></notes>
+    </release>
     <release>
      <version>1.2.1</version>
      <date>2004-11-18</date>
