--- a/package.xml
+++ b/package.xml
@@ -31,15 +31,12 @@
   </maintainers>
   <license>PHP License</license>
    <release>
-    <version>1.3.2</version>
-    <date>2006-10-03</date>
+    <version>1.3.3</version>
+    <date>2006-11-07</date>
     <state>stable</state>
-    <notes><![CDATA[
-Fix for bug #8643: Providing strings as min/max values gives weird results (Benjamin Bittner)
-Fix for bug #8770: incorrect path to class resource in example2 (Laurent Laville)
-Implement request #8771: Improve help-usage output render with optional indentation (Laurent Laville)
-Implement request #8771: Improve col1 arguments alignment (Laurent Laville)
-    ]]></notes>
+    <notes>
+     Fix for bug #9252: No error when required arguments are missing.
+    </notes>
     <filelist>
       <dir name="/" baseinstalldir="Console">
         <file role="php" name="Getargs.php" />
@@ -60,6 +57,17 @@ Implement request #8771: Improve col1 arguments alignment (Laurent Laville)
     </deps>
   </release>
   <changelog>
+   <release>
+    <version>1.3.2</version>
+    <date>2006-10-03</date>
+    <state>stable</state>
+    <notes><![CDATA[
+Fix for bug #8643: Providing strings as min/max values gives weird results (Benjamin Bittner)
+Fix for bug #8770: incorrect path to class resource in example2 (Laurent Laville)
+Implement request #8771: Improve help-usage output render with optional indentation (Laurent Laville)
+Implement request #8771: Improve col1 arguments alignment (Laurent Laville)
+    ]]></notes>
+   </release>
    <release>
     <version>1.3.1</version>
     <date>2006-04-10</date>
