--- a/package.xml
+++ b/package.xml
@@ -1,131 +1,223 @@
-<?xml version="1.0" encoding="ISO-8859-1" ?>
-<!DOCTYPE package SYSTEM "http://pear.php.net/dtd/package-1.0">
-<package version="1.0">
-  <name>Console_Getargs</name>
-  <summary>A command-line arguments parser</summary>
-  <description>
-    The Console_Getargs package implements a Command Line arguments and
-    parameters parser for your CLI applications. It performs some basic
-    arguments validation and automatically creates a formatted help text,
-    based on the given configuration.
-  </description>
-  <maintainers>
-    <maintainer>
-      <user>mansion</user>
-      <name>Bertrand Mansion</name>
-      <email>bmansion@mamasam.com</email>
-      <role>lead</role>
-    </maintainer>
-    <maintainer>
-      <user>scottmattocks</user>
-      <name>Scott Mattocks</name>
-      <email>scottmattocks@php.net</email>
-      <role>lead</role>
-    </maintainer>
-    <maintainer>
-      <user>wenz</user>
-      <name>Christian Wenz</name>
-      <email>wenz@php.net</email>
-      <role>developer</role>
-    </maintainer>
-  </maintainers>
-  <license>PHP License</license>
-   <release>
-    <version>1.3.3</version>
-    <date>2006-11-07</date>
-    <state>stable</state>
-    <notes>
-     Fix for bug #9252: No error when required arguments are missing.
-    </notes>
-    <filelist>
-      <dir name="/" baseinstalldir="Console">
-        <file role="php" name="Getargs.php" />
-        <dir name="examples">
-          <file role="doc" name="example.php" />
-          <file role="doc" name="example2.php" />
-        </dir>
-        <dir name="tests">
-          <file role="test" name="Console_TestListener.php"/>
-          <file role="test" name="Getargs_basic_testcase.php"/>
-          <file role="test" name="Getargs_getValues_testcase.php"/>
-          <file role="test" name="test.php"/>
-        </dir>
-      </dir>
-    </filelist>
-    <deps>
-      <dep type="php" rel="ge" version="4.1.0" optional="no"/>
-    </deps>
+<?xml version="1.0" encoding="UTF-8"?>
+<package packagerversion="1.9.0" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
+ <name>Console_Getargs</name>
+ <channel>pear.php.net</channel>
+ <summary>A command-line arguments parser</summary>
+ <description>The Console_Getargs package implements a Command Line arguments and
+parameters parser for your CLI applications. It performs some basic
+arguments validation and automatically creates a formatted help text,
+based on the given configuration.</description>
+ <lead>
+  <name>Bertrand Mansion</name>
+  <user>mansion</user>
+  <email>bmansion@mamasam.com</email>
+  <active>yes</active>
+ </lead>
+ <lead>
+  <name>Scott Mattocks</name>
+  <user>scottmattocks</user>
+  <email>scottmattocks@php.net</email>
+  <active>yes</active>
+ </lead>
+ <developer>
+  <name>Christian Wenz</name>
+  <user>wenz</user>
+  <email>wenz@php.net</email>
+  <active>yes</active>
+ </developer>
+ <date>2010-02-14</date>
+ <time>13:31:03</time>
+ <version>
+  <release>1.3.4</release>
+  <api>1.3.4</api>
+ </version>
+ <stability>
+  <release>stable</release>
+  <api>stable</api>
+ </stability>
+ <license uri="http://www.php.net/license">PHP License</license>
+ <notes>
+Update to package2.xml
+ </notes>
+ <contents>
+  <dir baseinstalldir="/" name="/">
+   <file baseinstalldir="/" md5sum="459bc27430e273c0c336476de5b41249" name="Console/Getargs.php" role="php" />
+   <file baseinstalldir="Console" md5sum="1ecd39fd0b3b950faacbdae5839630f2" name="examples/example.php" role="doc" />
+   <file baseinstalldir="Console" md5sum="fc1f86032b8c5386ebe5ae96ed1f306f" name="examples/example2.php" role="doc" />
+   <file baseinstalldir="/" md5sum="dfa4fedac68a13247f94b89c9dbd36ce" name="tests/AllTests.php" role="test" />
+   <file baseinstalldir="Console" md5sum="18b0e8c595a6ab3da99d9e57b805fb5d" name="tests/Getargs_basic_testcase.php" role="test" />
+   <file baseinstalldir="" md5sum="273e593a69eabdd041f2f4f74e08318b" name="tests/Getargs_getValues_testcase.php" role="test" />
+  </dir>
+ </contents>
+ <dependencies>
+  <required>
+   <php>
+    <min>4.1.0</min>
+   </php>
+   <pearinstaller>
+    <min>1.4.0b1</min>
+   </pearinstaller>
+  </required>
+ </dependencies>
+ <phprelease />
+ <changelog>
+  <release>
+   <version>
+    <release>0.1.0</release>
+    <api>0.1.0</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2004-05-16</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+Initial release
+   </notes>
   </release>
-  <changelog>
-   <release>
-    <version>1.3.2</version>
-    <date>2006-10-03</date>
-    <state>stable</state>
-    <notes><![CDATA[
-Fix for bug #8643: Providing strings as min/max values gives weird results (Benjamin Bittner)
-Fix for bug #8770: incorrect path to class resource in example2 (Laurent Laville)
-Implement request #8771: Improve help-usage output render with optional indentation (Laurent Laville)
-Implement request #8771: Improve col1 arguments alignment (Laurent Laville)
-    ]]></notes>
-   </release>
-   <release>
-    <version>1.3.1</version>
-    <date>2006-04-10</date>
-    <state>stable</state>
-    <notes><![CDATA[
-Fix for Bug #7132: Missing value for $_SERVER['SCRIPT_NAME']. If $SERVER['SCRIPT_NAME'] not found, use $argv[0].
-    ]]></notes>
-   </release>
-   <release>
-    <version>1.3.0</version>
-    <date>2005-05-13</date>
-    <state>stable</state>
-    <notes><![CDATA[
-Implement feature request #4091: New method: getValues() (Stephan Schmidt)
-    ]]></notes>
-    </release>
-    <release>
-     <version>1.2.1</version>
-     <date>2004-11-18</date>
-     <state>stable</state>
-     <notes><![CDATA[
-Implement fix for bug #2677: Empty array for $arguments parameter (Bertrand Gugger)
-     ]]></notes>
-    </release>
-    <release>
-      <version>1.2.0</version>
-      <date>2004-10-22</date>
-      <state>stable</state>
-      <notes><![CDATA[
+  <release>
+   <version>
+    <release>1.0.0</release>
+    <api>1.0.0</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2004-09-20</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+First stable release
+Fixed bug #1823 : The getHelp() method ignores user-defined header.
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.1.0</release>
+    <api>1.1.0</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2004-09-30</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+Implement feature request #2409: Parse args like &apos;-dt&apos;...
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.2.0</release>
+    <api>1.2.0</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2004-10-22</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
 Implement feature request #2428: Passing parameters on the command line
 Implement feature request #2445: Allow user defined argument lists
 Implement fix for bug #2486: Notice in parseArgs
 More detailed help message. Shows optional/required arguments.
-New example file. 
-    ]]></notes>
-    </release>
-    <release>
-      <version>1.1.0</version>
-      <date>2004-09-30</date>
-      <state>stable</state>
-      <notes><![CDATA[
-Implement feature request #2409: Parse args like '-dt'...
-      ]]></notes>
-    </release>
-    <release>
-      <version>1.0.0</version>
-      <date>2004-09-20</date>
-      <state>stable</state> 
-      <notes><![CDATA[
-First stable release
-Fixed bug #1823 : The getHelp() method ignores user-defined header.
-      ]]></notes>
-    </release>
-    <release>
-      <version>0.1.0</version>
-      <date>2004-05-16</date>
-      <state>beta</state> 
-      <notes>Initial release</notes>
-    </release>
-  </changelog>
+New example file.
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.2.1</release>
+    <api>1.2.1</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2004-11-18</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+Implement fix for bug #2677: Empty array for $arguments parameter (Bertrand Gugger)
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.3.0</release>
+    <api>1.3.0</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2005-05-13</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+Implement feature request #4091: New method: getValues() (Stephan Schmidt)
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.3.1</release>
+    <api>1.3.1</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2006-04-10</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+Fix for Bug #7132: Missing value for $_SERVER[&apos;SCRIPT_NAME&apos;]. If $SERVER[&apos;SCRIPT_NAME&apos;] not found, use $argv[0].
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.3.2</release>
+    <api>1.3.2</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2006-10-03</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+Fix for bug #8643: Providing strings as min/max values gives weird results (Benjamin Bittner)
+Fix for bug #8770: incorrect path to class resource in example2 (Laurent Laville)
+Implement request #8771: Improve help-usage output render with optional indentation (Laurent Laville)
+Implement request #8771: Improve col1 arguments alignment (Laurent Laville)
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.3.3</release>
+    <api>1.3.3</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2006-11-07</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+Fix for bug #9252: No error when required arguments are missing.
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.3.4</release>
+    <api>1.3.4</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2010-02-14</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+Update to package2.xml
+   </notes>
+  </release>
+ </changelog>
 </package>
