QA: Prepared release 1.3.5
git-svn-id: http://svn.php.net/repository/pear/packages/Console_Getargs/trunk@304314 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -11,25 +11,25 @@ based on the given configuration.</description>
   <name>Bertrand Mansion</name>
   <user>mansion</user>
   <email>bmansion@mamasam.com</email>
-  <active>yes</active>
+  <active>no</active>
  </lead>
  <lead>
   <name>Scott Mattocks</name>
   <user>scottmattocks</user>
   <email>scottmattocks@php.net</email>
-  <active>yes</active>
+  <active>no</active>
  </lead>
  <developer>
   <name>Christian Wenz</name>
   <user>wenz</user>
   <email>wenz@php.net</email>
-  <active>yes</active>
+  <active>no</active>
  </developer>
- <date>2010-02-14</date>
- <time>13:31:03</time>
+ <date>2010-10-11</date>
+ <time>16:40:03</time>
  <version>
-  <release>1.3.4</release>
-  <api>1.3.4</api>
+  <release>1.3.5</release>
+  <api>1.3.5</api>
  </version>
  <stability>
   <release>stable</release>
@@ -37,16 +37,26 @@ based on the given configuration.</description>
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-Update to package2.xml
+  QA release.
+  * removed some coding style erros
+  * fixed bug #2599 2 parameters for CVS example
+  * fixed bug #2600 Parameter with '=argument"   
+  * fixed bug #4091 New method: getValues()
+  * fixed bug #9252 No error when required arguments are missing
+  * fixed bug #9583 Console Args isDefined not working correctly
+  * fixed bug #10609 wrong require_once in doc
+  * fixed bug #13605 fix unit tests to work with phpunit3
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
-   <file baseinstalldir="/" md5sum="459bc27430e273c0c336476de5b41249" name="Console/Getargs.php" role="php" />
-   <file baseinstalldir="Console" md5sum="1ecd39fd0b3b950faacbdae5839630f2" name="examples/example.php" role="doc" />
-   <file baseinstalldir="Console" md5sum="fc1f86032b8c5386ebe5ae96ed1f306f" name="examples/example2.php" role="doc" />
-   <file baseinstalldir="/" md5sum="dfa4fedac68a13247f94b89c9dbd36ce" name="tests/AllTests.php" role="test" />
-   <file baseinstalldir="Console" md5sum="18b0e8c595a6ab3da99d9e57b805fb5d" name="tests/Getargs_basic_testcase.php" role="test" />
-   <file baseinstalldir="" md5sum="273e593a69eabdd041f2f4f74e08318b" name="tests/Getargs_getValues_testcase.php" role="test" />
+   <file baseinstalldir="/" name="Console/Getargs.php" role="php">
+     <replace from="@package_version@" to="version" type="package-info" />
+   </file>
+   <file baseinstalldir="Console" name="examples/example.php" role="doc" />
+   <file baseinstalldir="Console" name="examples/example2.php" role="doc" />
+   <file baseinstalldir="/" name="tests/AllTests.php" role="test" />
+   <file baseinstalldir="Console" name="tests/Getargs_basic_testcase.php" role="test" />
+   <file baseinstalldir="" name="tests/Getargs_getValues_testcase.php" role="test" />
   </dir>
  </contents>
  <dependencies>
