--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.9.0" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
+<package packagerversion="1.9.4" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
  <name>Console_Getargs</name>
  <channel>pear.php.net</channel>
  <summary>A command-line arguments parser</summary>
@@ -25,11 +25,11 @@ based on the given configuration.</description>
   <email>wenz@php.net</email>
   <active>no</active>
  </developer>
- <date>2010-10-11</date>
- <time>16:40:03</time>
+ <date>2011-11-06</date>
+ <time>13:11:30</time>
  <version>
-  <release>1.3.5</release>
-  <api>1.3.5</api>
+  <release>1.3.6</release>
+  <api>1.3.6</api>
  </version>
  <stability>
   <release>stable</release>
@@ -37,26 +37,19 @@ based on the given configuration.</description>
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-  QA release.
-  * removed some coding style erros
-  * fixed bug #2599 2 parameters for CVS example
-  * fixed bug #2600 Parameter with '=argument"   
-  * fixed bug #4091 New method: getValues()
-  * fixed bug #9252 No error when required arguments are missing
-  * fixed bug #9583 Console Args isDefined not working correctly
-  * fixed bug #10609 wrong require_once in doc
-  * fixed bug #13605 fix unit tests to work with phpunit3
+QA Release.
+Upgrade to phpunit 3.6
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
-   <file baseinstalldir="/" name="Console/Getargs.php" role="php">
-     <replace from="@package_version@" to="version" type="package-info" />
+   <file baseinstalldir="/" md5sum="0906cc9b6eea315b36487c9680471bf1" name="Console/Getargs.php" role="php">
+    <tasks:replace from="@package_version@" to="version" type="package-info" />
    </file>
-   <file baseinstalldir="Console" name="examples/example.php" role="doc" />
-   <file baseinstalldir="Console" name="examples/example2.php" role="doc" />
-   <file baseinstalldir="/" name="tests/AllTests.php" role="test" />
-   <file baseinstalldir="Console" name="tests/Getargs_basic_testcase.php" role="test" />
-   <file baseinstalldir="" name="tests/Getargs_getValues_testcase.php" role="test" />
+   <file baseinstalldir="Console" md5sum="6a5651269cfaa096143c02426c070ae6" name="examples/example.php" role="doc" />
+   <file baseinstalldir="Console" md5sum="8b053b550ce74b06f7b000906df47f8f" name="examples/example2.php" role="doc" />
+   <file baseinstalldir="/" md5sum="ae35d76786d4753954495f05f2935a3b" name="tests/Getargs_BasicTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="32ada775f0d4d8bee604bbe08298d61b" name="tests/Getargs_getValuesTest.php" role="test" />
+   <file baseinstalldir="/" md5sum="c6adc2abcd57bf1315a6619032335dc0" name="README" role="data" />
   </dir>
  </contents>
  <dependencies>
@@ -68,6 +61,13 @@ based on the given configuration.</description>
     <min>1.4.0b1</min>
    </pearinstaller>
   </required>
+  <optional>
+   <package>
+    <name>PHPUnit</name>
+    <channel>pear.phpunit.de</channel>
+    <min>3.6.0</min>
+   </package>
+  </optional>
  </dependencies>
  <phprelease />
  <changelog>
@@ -227,6 +227,22 @@ Fix for bug #9252: No error when required arguments are missing.
    <license uri="http://www.php.net/license">PHP License</license>
    <notes>
 Update to package2.xml
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.3.6</release>
+    <api>1.3.6</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2011-11-06</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+QA Release.
+Upgrade to phpunit 3.6
    </notes>
   </release>
  </changelog>
