--- a/build.xml
+++ b/build.xml
@@ -30,7 +30,7 @@
 		<exec executable="phpcs" output="/dev/null">
 			<arg value="--report=checkstyle" />
 			<arg value="--report-file=${basedir}/build/logs/checkstyle.xml" />
-			<arg path="${basedir}" />
+			<arg path="${basedir}/Console/" />
 		</exec>
 	</target>
 
