--- a/package.xml
+++ b/package.xml
@@ -25,11 +25,10 @@ based on the given configuration.</description>
   <email>wenz@php.net</email>
   <active>no</active>
  </developer>
- <date>2011-11-06</date>
- <time>13:11:30</time>
+ <date>2018-02-13</date>
  <version>
-  <release>1.3.6</release>
-  <api>1.3.6</api>
+  <release>1.4.0</release>
+  <api>1.4.0</api>
  </version>
  <stability>
   <release>stable</release>
@@ -37,8 +36,8 @@ based on the given configuration.</description>
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-QA Release.
-Upgrade to phpunit 3.6
+  - Bug #21250 "Not compatible with PHP 7"
+  - PR #3 "fix for PHP 7.2"
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -243,6 +242,22 @@ Update to package2.xml
    <notes>
 QA Release.
 Upgrade to phpunit 3.6
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.4.0</release>
+    <api>1.4.0</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2018-02-13</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+    - Bug #21250 "Not compatible with PHP 7"
+    - PR #3 "fix for PHP 7.2"
    </notes>
   </release>
  </changelog>
