--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "include-path": [
         "./"
     ],
-    "license": "PHP License",
+    "license": "PHP-3.0",
     "name": "pear/console_getargs",
     "support": {
         "issues": "http://pear.php.net/bugs/search.php?cmd=display&package_name[]=Console_Getargs",
